--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.18",
+    "release-please": "^13.18.5",
     "sass": "^1.53.0",
     "vite": "^2.9.13",
     "vitest": "^0.16.0"
