--- a/package.json
+++ b/package.json
@@ -1,70 +1,99 @@
 {
-  "name": "agrc-component-monorepo",
+  "name": "@ugrc/kitchen-sink",
   "version": "1.0.0",
-  "license": "MIT",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/agrc/kitchen-sink.git"
   },
-  "main": "",
-  "private": true,
-  "devDependencies": {
-    "@agrc/eslint-config": "^1.3.0",
-    "@arcgis/core": "^4.18.1",
-    "@babel/cli": "^7.12.10",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-optional-chaining": "^7.12.7",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
-    "@storybook/addon-essentials": "^6.2.3",
-    "@storybook/addon-storyshots": "^6.2.3",
-    "@storybook/addons": "^6.2.3",
-    "@storybook/react": "^6.2.3",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-require-context-hook": "^1.0.0",
-    "babel-plugin-transform-rename-import": "^2.3.0",
-    "chokidar-cli": "^2.1.0",
-    "copy-webpack-plugin": "^6.*",
-    "copyfiles": "^2.4.1",
-    "core-js": "^3.8.2",
-    "eslint": "^7.17.0",
-    "esri-loader": "^3.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^26.6.3",
-    "lerna": "^3.22.1",
-    "react-test-renderer": "^17.0.1",
-    "regenerator-runtime": "^0.13.7",
-    "sass": "^1.32.4",
-    "sass-loader": "^10.1.1"
+  "license": "MIT",
+  "author": "ugrc developers",
+  "type": "module",
+  "workspaces": [
+    "packages/utilities",
+    "packages/dart-board",
+    "packages/layer-selector",
+    "packages/mouse-trap",
+    "packages/sherlock"
+  ],
+  "scripts": {
+    "build-storybook": "build-storybook",
+    "format": "prettier . --write",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --quiet --fix",
+    "storybook": "start-storybook -p 6006",
+    "test": "vitest"
+  },
+  "prettier": {
+    "semi": true,
+    "singleQuote": true
   },
   "eslintConfig": {
-    "extends": "@agrc",
-    "ignorePatterns": [
-      "dist/"
+    "env": {
+      "browser": true,
+      "es2021": true,
+      "jest": true,
+      "node": true
+    },
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 12,
+      "sourceType": "module"
+    },
+    "settings": {
+      "react": {
+        "version": "detect"
+      }
+    },
+    "plugins": [
+      "react",
+      "prettier",
+      "import",
+      "jsx-a11y",
+      "react-hooks"
     ],
-    "parser": "babel-eslint"
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "plugin:react/jsx-runtime",
+      "plugin:react-hooks/recommended",
+      "plugin:import/recommended",
+      "plugin:jsx-a11y/recommended",
+      "prettier"
+    ]
   },
-  "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "build": "lerna exec 'babel src --out-dir dist --root-mode upward --delete-dir-on-start --source-maps --ignore \"**/*.stories.js\",\"**/*.test.js\" --env-name prod && copyfiles --up 1 src/*.svg dist && sass src:dist'",
-    "test": "jest --watch",
-    "start": "npm run build && chokidar \"packages/**/*.*\" \"!packages/**/dist/**/*.*\" -c \"npm run build\"",
-    "link:external": "lerna exec -- npm link",
-    "link": "lerna link",
-    "unlink:external": "lerna exec -- npm unlink",
-    "lint": "lerna exec -- eslint ./",
-    "prepare": "npm run build",
-    "release": "lerna publish --conventional-commits",
-    "pre-release": "lerna publish --conventional-commits --conventional-prerelease --canary",
-    "graduate": "lerna publish --conventional-commits --conventional-graduate"
+  "dependencies": {
+    "react": ">=16.8.0",
+    "react-dom": ">=16.8.0"
   },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|scss)$": "identity-obj-proxy"
-    }
+  "devDependencies": {
+    "@arcgis/core": "^4.18.0",
+    "@babel/core": "^7.18.5",
+    "@storybook/addon-actions": "^6.5.9",
+    "@storybook/addon-essentials": "^6.5.9",
+    "@storybook/addon-interactions": "^6.5.9",
+    "@storybook/addon-links": "^6.5.9",
+    "@storybook/builder-vite": "^0.1.37",
+    "@storybook/react": "^6.5.9",
+    "@testing-library/react": "^13.3.0",
+    "@types/arcgis-js-api": "^4.24.0",
+    "@vitejs/plugin-react": "^1.3.2",
+    "babel-loader": "^8.2.5",
+    "eslint": "^8.18.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.0",
+    "eslint-plugin-prettier": "^4.1.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^20.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-packagejson": "^2.2.18",
+    "release-please": "^13.18.5",
+    "sass": "^1.53.0",
+    "vite": "^2.9.13",
+    "vitest": "^0.16.0"
   }
 }
