--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "@ugrc/sherlock",
-  "version": "2.3.0",
+  "name": "@ugrc/dart-board",
+  "version": "3.3.1",
   "private": false,
-  "description": "A React component for searching for data and zooming to it on the map.",
+  "description": "[![NPM version](https://badgen.net/npm/v/@ugrc/dart-board)](https://www.npmjs.com/package/@ugrc/dart-board)",
   "keywords": [
     "ugrc",
     "component",
     "esri",
     "react",
-    "searching",
-    "type-ahead",
+    "geocoding",
     "spatial"
   ],
-  "homepage": "https://github.com/agrc/kitchen-sink/tree/main/packages/sherlock",
+  "homepage": "https://github.com/agrc/kitchen-sink/blob/main/packages/dartboard/READMD.md",
   "bugs": {
     "url": "https://github.com/agrc/kitchen-sink/issues"
   },
@@ -27,25 +26,18 @@
   "module": "./src/index.js",
   "files": [
     "/src/index.js",
-    "/src/Sherlock.jsx",
-    "/src/Sherlock.scss"
+    "/src/Dartboard.jsx",
+    "/src/Dartboard.css"
   ],
   "scripts": {
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "downshift": "^6.1.7",
-    "lodash.escaperegexp": "^4.1.2",
-    "lodash.sortby": "^4.7.0",
-    "lodash.uniqwith": "^4.5.0",
-    "react-fast-compare": "^3.2.0",
+    "@ugrc/utilities": "^1.3.1",
+    "clsx": "^1.1.1",
     "reactstrap": "^8.8.1"
   },
   "peerDependencies": {
-    "@arcgis/core": "^4.18.0",
     "bootstrap": "^4.5.3",
     "prop-types": "^15.8.1",
     "react": ">=16.8.0",
