--- a/package.json
+++ b/package.json
@@ -71,12 +71,14 @@
   "devDependencies": {
     "@arcgis/core": "^4.18.0",
     "@babel/core": "^7.18.5",
+    "@mdx-js/react": "^2.1.2",
     "@storybook/addon-actions": "^6.5.9",
     "@storybook/addon-essentials": "^6.5.9",
     "@storybook/addon-interactions": "^6.5.9",
     "@storybook/addon-links": "^6.5.9",
     "@storybook/builder-vite": "^0.1.37",
     "@storybook/react": "^6.5.9",
+    "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.3.0",
     "@types/arcgis-js-api": "^4.24.0",
     "@vitejs/plugin-react": "^1.3.2",
