--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -35,9 +35,10 @@
   "dependencies": {
     "@ugrc/utilities": "^1.3.1",
     "clsx": "^1.1.1",
-    "reactstrap": "^8.8.1"
+    "reactstrap": "^9.1.1"
   },
   "peerDependencies": {
+    "@arcgis/core": "^4.20.0",
     "bootstrap": "^4.5.3",
     "prop-types": "^15.8.1",
     "react": ">=16.8.0",
