--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -3,5 +3,6 @@
   "packages/layer-selector": "4.0.5",
   "packages/mouse-trap": "1.1.3",
   "packages/sherlock": "2.3.0",
-  "packages/utilities": "1.3.1"
+  "packages/utilities": "1.3.1",
+  ".": "0.0.0"
 }
