--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,9 +12,14 @@ jobs:
   release:
     name: Release Please
     runs-on: ubuntu-latest
+    outputs:
+      releases_created: ${{ steps.release-please.outputs.releases_created }}
     steps:
-      - uses: google-github-actions/release-please-action@v3
+      - name: 🛠️ Create release
+        id: release-please
+        uses: google-github-actions/release-please-action@v3
         with:
+          pull-request-title-pattern: 'chore(monorepo): create releases'
           release-type: node
           monorepo-tags: true
           command: manifest
@@ -23,7 +28,7 @@ jobs:
     name: Publish to npm
     runs-on: ubuntu-latest
     needs: release
-    if: needs.release.steps.release.outputs.release_created
+    if: needs.release.releases_created
     steps:
       - name: ⬇️ Set up code
         uses: actions/checkout@v3
@@ -38,6 +43,7 @@ jobs:
       - name: 📥 Download dependencies
         run: npm ci
 
-      - run: 🚢 npm publish --workspaces
+      - name: 🚢 Publish packages
+        run: npm publish --workspaces
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
