--- a/packages/mouse-trap/package.json
+++ b/packages/mouse-trap/package.json
@@ -22,13 +22,20 @@
   },
   "license": "MIT",
   "author": "ugrc developers",
-  "type": "module",
-  "main": "./src/index.js",
-  "module": "./src/index.js",
-  "files": [
-    "/src/index.js",
-    "/src/MouseTrap.jsx"
+  "maintainers": [
+    {
+      "name": "Steve Gourley",
+      "email": "sgourley@utah.gov"
+    },
+    {
+      "name": "Scott Davis",
+      "email": "stdavis@utah.gov"
+    }
   ],
+  "type": "module",
+  "exports": {
+    ".": "./src/index"
+  },
   "scripts": {
     "test": "vitest --config ../../vite.config.js"
   },
@@ -41,8 +48,5 @@
     "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
-  },
-  "publishConfig": {
-    "directory": "dist"
   }
 }
