feat(default-extent): introduce new component
closes #46

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "packages/dart-board",
     "packages/layer-selector",
     "packages/mouse-trap",
-    "packages/sherlock"
+    "packages/sherlock",
+    "packages/default-extent"
   ],
   "scripts": {
     "build-storybook": "build-storybook",
