--- a/packages/sherlock/package.json
+++ b/packages/sherlock/package.json
@@ -45,9 +45,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "downshift": "^6.1.7",
-    "lodash.escaperegexp": "^4.1.2",
-    "lodash.sortby": "^4.7.0",
-    "lodash.uniqwith": "^4.5.0",
+    "lodash-es": "^4.17.21",
     "react-fast-compare": "^3.2.0",
     "reactstrap": "^9.1.1"
   },
