--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "packages/sherlock"
   ],
   "scripts": {
+    "build": "npm run build --workspaces",
     "build-storybook": "build-storybook",
     "format": "prettier . --write",
     "lint": "eslint .",
@@ -32,7 +33,7 @@
   "eslintConfig": {
     "env": {
       "browser": true,
-      "es2021": true,
+      "es2022": true,
       "jest": true,
       "node": true
     },
@@ -40,7 +41,7 @@
       "ecmaFeatures": {
         "jsx": true
       },
-      "ecmaVersion": 12,
+      "ecmaVersion": "latest",
       "sourceType": "module"
     },
     "settings": {
@@ -94,6 +95,7 @@
     "jsdom": "^20.0.0",
     "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.18",
+    "read-pkg": "^7.1.0",
     "release-please": "^13.18.7",
     "sass": "^1.53.0",
     "vite": "^2.9.13",
