ci: build packages for testing and publishing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,5 +48,8 @@ jobs:
       - name: 📥 Download dependencies
         run: npm ci
 
+      - name: 🏗 Run build script
+        run: npm run build
+
       - name: 🧪 Run tests
         run: npm test
