--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -39,6 +39,10 @@
       "import": "./dist/index.esm.js"
     }
   },
+  "files": [
+    "dist",
+    "src"
+  ],
   "scripts": {
     "build": "vite build --config ../../vite.config.js",
     "test": "vitest --config ../../vite.config.js"
