fix!: inlined styles aren't displayed
BREAKING: css has to be imported explicitly

--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -37,6 +37,9 @@
   "exports": {
     ".": {
       "import": "./dist/index.esm.js"
+    },
+    "./src/": {
+      "import": "./src/"
     }
   },
   "files": [
