--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -36,6 +36,9 @@
   "exports": {
     ".": {
       "import": "./dist/index.esm.js"
+    },
+    "./src/": {
+      "import": "./src/"
     }
   },
   "files": [
