--- a/package.json
+++ b/package.json
@@ -71,35 +71,36 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@arcgis/core": "^4.24.7",
-    "@babel/core": "^7.20.2",
+    "@arcgis/core": "^4.25.5",
+    "@babel/core": "^7.20.5",
     "@mdx-js/react": "^2.1.5",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-interactions": "^6.5.14",
+    "@storybook/addon-links": "^6.5.14",
     "@storybook/builder-vite": "^0.2.5",
-    "@storybook/react": "^6.5.13",
+    "@storybook/react": "^6.5.14",
     "@storybook/testing-library": "^0.0.13",
     "@testing-library/react": "^13.4.0",
-    "@types/arcgis-js-api": "^4.24.0",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@types/arcgis-js-api": "^4.25.0",
+    "@vitejs/plugin-react": "^3.0.0",
     "babel-loader": "^9.1.0",
     "chokidar-cli": "^3.0.0",
-    "eslint": "^8.27.0",
+    "eslint": "^8.29.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jsdom": "^20.0.2",
-    "prettier": "^2.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "jsdom": "^20.0.3",
+    "prettier": "^2.8.1",
     "prettier-plugin-packagejson": "^2.3.0",
     "read-pkg": "^7.1.0",
-    "release-please": "^14.16.0",
-    "sass": "^1.56.0",
-    "vite": "^3.2.3",
-    "vitest": "^0.24.5"
+    "release-please": "^14.17.5",
+    "sass": "^1.56.2",
+    "vite": "^4.0.0",
+    "vitest": "^0.25.6"
   }
 }
