fix(mono-repo): Q2 Dep Bumps 🌲
Including storybook major bump

--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
   ],
   "scripts": {
     "build": "npm run build --workspaces",
-    "build-storybook": "build-storybook",
+    "build-storybook": "storybook build",
     "format": "prettier . --write",
     "lint": "eslint .",
     "lint:fix": "eslint . --quiet --fix",
     "npm-check": "npm exec --workspaces -- npx npm-check --update",
-    "storybook": "start-storybook --port 6006",
+    "storybook": "storybook dev --port 6006",
     "test": "vitest"
   },
   "prettier": {
@@ -74,14 +74,15 @@
     "@arcgis/core": "^4.25.5",
     "@babel/core": "^7.20.7",
     "@mdx-js/react": "^2.2.1",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.6",
-    "@storybook/react": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
-    "@testing-library/react": "^13.4.0",
+    "@storybook/addon-actions": "^7.0.2",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/addon-mdx-gfm": "^7.0.2",
+    "@storybook/react": "^7.0.2",
+    "@storybook/react-vite": "^7.0.2",
+    "@storybook/testing-library": "^0.1.0",
+    "@testing-library/react": "^14.0.0",
     "@types/arcgis-js-api": "^4.25.0",
     "@vitejs/plugin-react": "^3.0.0",
     "babel-loader": "^9.1.0",
@@ -94,13 +95,14 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
-    "jsdom": "^20.0.3",
+    "jsdom": "^21.1.1",
     "prettier": "^2.8.1",
     "prettier-plugin-packagejson": "^2.3.0",
     "read-pkg": "^7.1.0",
     "release-please": "^15.0.0",
     "sass": "^1.57.1",
+    "storybook": "^7.0.2",
     "vite": "^4.0.4",
-    "vitest": "^0.26.3"
+    "vitest": "^0.29.8"
   }
 }
