ci:(dependabot): add groups to github-action updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -20,3 +20,6 @@ updates:
       interval: monthly
     labels:
       - dependencies
+    groups:
+      ci-dependencies:
+        dependency-type: 'production'
