Apply suggestions from code review

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - name: ⬇️ Set up code
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
@@ -39,6 +41,8 @@ jobs:
     steps:
       - name: ⬇️ Set up code
         uses: actions/checkout@v4
+        with:
+          show-progress: false
 
       - name: ⎔ Setup Node.js
         uses: actions/setup-node@v3
