--- a/release-please-config.json
+++ b/release-please-config.json
@@ -7,5 +7,6 @@
     "packages/mouse-trap": {},
     "packages/sherlock": {},
     "packages/utilities": {}
-  }
+  },
+  "include-component-in-tag": true
 }
