--- a/package.json
+++ b/package.json
@@ -67,20 +67,21 @@
     ]
   },
   "dependencies": {
+    "@storybook/test": "^8.0.8",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "@arcgis/core": "^4.29.10",
     "@babel/core": "^7.24.4",
+    "@chromatic-com/storybook": "^1.3.3",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^7.6.17",
-    "@storybook/addon-essentials": "^7.6.17",
-    "@storybook/addon-interactions": "^7.6.17",
-    "@storybook/addon-links": "^7.6.17",
-    "@storybook/react": "^7.6.17",
-    "@storybook/react-vite": "^7.6.17",
-    "@storybook/testing-library": "^0.2.2",
+    "@storybook/addon-actions": "^8.0.8",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-vite": "^8.0.8",
     "@testing-library/react": "^14.2.2",
     "@vitejs/plugin-react": "^4.2.1",
     "babel-loader": "^9.1.3",
@@ -99,7 +100,7 @@
     "read-pkg": "^9.0.1",
     "release-please": "^16.10.1",
     "sass": "^1.75.0",
-    "storybook": "^7.6.17",
+    "storybook": "^8.0.8",
     "vite": "^5.2.9",
     "vitest": "^1.5.0"
   }
