feat(popover): migrate popover component from web api project

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "packages/header",
     "packages/layer-selector",
     "packages/mouse-trap",
+    "packages/popover",
     "packages/sherlock"
   ],
   "scripts": {
