--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -51,6 +51,7 @@
   "peerDependencies": {
     "@arcgis/core": "^4.20.0",
     "prop-types": "^15.8.1",
-    "react": ">=16.8.0"
+    "react": ">=16.8.0",
+    "ky": ">=1.3.0"
   }
 }
