--- a/package.json
+++ b/package.json
@@ -10,13 +10,7 @@
   "author": "ugrc developers",
   "type": "module",
   "workspaces": [
-    "packages/utilities",
-    "packages/popover",
-    "packages/dart-board",
-    "packages/header",
-    "packages/layer-selector",
-    "packages/mouse-trap",
-    "packages/sherlock"
+    "packages/*"
   ],
   "scripts": {
     "build": "npm run build --workspaces",
@@ -75,7 +69,11 @@
   "dependencies": {
     "@storybook/test": "^8.1.11",
     "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react-aria-components": "^1.2.1",
+    "react-dom": ">=16.8.0",
+    "react-hook-form": "^7.52.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@arcgis/core": "^4.29.10",
@@ -86,10 +84,13 @@
     "@storybook/addon-essentials": "^8.1.11",
     "@storybook/addon-interactions": "^8.1.11",
     "@storybook/addon-links": "^8.1.11",
+    "@storybook/addon-themes": "^8.1.11",
     "@storybook/react": "^8.1.11",
     "@storybook/react-vite": "^8.1.11",
     "@testing-library/react": "^16.0.0",
+    "@ugrc/tailwind-colors": "^1.0.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
     "babel-loader": "^9.1.3",
     "chokidar-cli": "^3.0.0",
     "eslint": "^8.57.0",
@@ -101,6 +102,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "html-webpack-plugin": "^5.6.0",
     "jsdom": "^24.1.0",
+    "postcss": "^8.4.38",
     "prettier": "^3.3.2",
     "prettier-plugin-packagejson": "^2.5.0",
     "prettier-plugin-tailwindcss": "^0.6.5",
