--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -37,8 +37,8 @@
     ".": {
       "import": "./dist/index.esm.js"
     },
-    "./src/": {
-      "import": "./src/"
+    "./src": {
+      "import": "./src/index.js"
     }
   },
   "files": [
