--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -51,7 +51,9 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "@ugrc/utilities": "*"
+    "@ugrc/utilities": "*",
+    "react-aria-components": "^1.2.1",
+    "tailwind-merge": "^2.4.0"
   },
   "peerDependencies": {
     "prop-types": "^15.8.1",
