--- a/package.json
+++ b/package.json
@@ -69,24 +69,24 @@
   "dependencies": {
     "@storybook/test": "^8.1.11",
     "react": ">=16.8.0",
-    "react-aria-components": "^1.2.1",
+    "react-aria-components": "^1.3.0",
     "react-dom": ">=16.8.0",
-    "react-hook-form": "^7.52.0",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "react-hook-form": "^7.52.1",
+    "react-stately": "^3.32.0",
+    "tailwind-merge": "^2.4.0"
   },
   "devDependencies": {
     "@arcgis/core": "^4.29.10",
     "@babel/core": "^7.24.7",
     "@chromatic-com/storybook": "^1.6.0",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.2.4",
-    "@storybook/addon-essentials": "^8.2.4",
-    "@storybook/addon-interactions": "^8.2.4",
-    "@storybook/addon-links": "^8.2.4",
-    "@storybook/addon-themes": "^8.2.4",
-    "@storybook/react": "^8.2.4",
-    "@storybook/react-vite": "^8.2.4",
+    "@storybook/addon-actions": "^8.2.5",
+    "@storybook/addon-essentials": "^8.2.5",
+    "@storybook/addon-interactions": "^8.2.5",
+    "@storybook/addon-links": "^8.2.5",
+    "@storybook/addon-themes": "^8.2.5",
+    "@storybook/react": "^8.2.5",
+    "@storybook/react-vite": "^8.2.5",
     "@testing-library/react": "^16.0.0",
     "@ugrc/tailwind-colors": "^1.0.0",
     "@vitejs/plugin-react": "^4.3.1",
@@ -97,20 +97,23 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.9.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "html-webpack-plugin": "^5.6.0",
-    "jsdom": "^24.1.0",
-    "postcss": "^8.4.38",
-    "prettier": "^3.3.2",
-    "prettier-plugin-packagejson": "^2.5.0",
+    "jsdom": "^24.1.1",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
+    "prettier-plugin-packagejson": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.6.5",
+    "react-lorem-ipsum": "^1.4.10",
     "read-pkg": "^9.0.1",
     "release-please": "^16.12.0",
-    "sass": "^1.77.6",
-    "storybook": "^8.1.11",
-    "vite": "^5.3.2",
-    "vitest": "^1.6.0"
+    "storybook": "^8.2.5",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss": "^3.4.6",
+    "tailwindcss-react-aria-components": "^1.1.4",
+    "vite": "^5.3.4",
+    "vitest": "^2.0.4"
   }
 }
