chore(design): polish for publish

--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -37,7 +37,7 @@
     ".": {
       "import": "./dist/index.esm.js"
     },
-    "./development": {
+    "./src": {
       "import": "./src/index.js"
     }
   },
