--- a/packages/popover/package.json
+++ b/packages/popover/package.json
@@ -35,8 +35,8 @@
     ".": {
       "import": "./dist/index.esm.js"
     },
-    "./src/": {
-      "import": "./src/"
+    "./src": {
+      "import": "./src/index.js"
     }
   },
   "files": [
