chore(darboard): revert changes

--- a/packages/dart-board/package.json
+++ b/packages/dart-board/package.json
@@ -51,8 +51,9 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "@ugrc/utilities": "*",
-    "@ugrc/utah-design-system": "*"
+    "@ugrc/utilities": "^2.2.2",
+    "clsx": "^2.1.0",
+    "reactstrap": "^9.2.2"
   },
   "peerDependencies": {
     "@arcgis/core": "^4.20.0",
