--- a/package.json
+++ b/package.json
@@ -69,29 +69,22 @@
   "dependencies": {
     "@storybook/test": "^8.1.11",
     "react": ">=16.8.0",
-    "react-aria-components": "^1.3.0",
-    "react-dom": ">=16.8.0",
-    "react-hook-form": "^7.52.1",
-    "react-stately": "^3.32.0",
-    "tailwind-merge": "^2.4.0"
+    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
-    "@arcgis/core": "^4.29.10",
-    "@babel/core": "^7.24.7",
-    "@chromatic-com/storybook": "^1.6.0",
+    "@chromatic-com/storybook": "^1.6.1",
     "@mdx-js/react": "^3.0.1",
-    "@storybook/addon-actions": "^8.2.5",
-    "@storybook/addon-essentials": "^8.2.5",
-    "@storybook/addon-interactions": "^8.2.5",
-    "@storybook/addon-links": "^8.2.5",
-    "@storybook/addon-themes": "^8.2.5",
-    "@storybook/react": "^8.2.5",
-    "@storybook/react-vite": "^8.2.5",
+    "@storybook/addon-actions": "^8.2.6",
+    "@storybook/addon-essentials": "^8.2.6",
+    "@storybook/addon-interactions": "^8.2.6",
+    "@storybook/addon-links": "^8.2.6",
+    "@storybook/addon-themes": "^8.2.6",
+    "@storybook/react": "^8.2.6",
+    "@storybook/react-vite": "^8.2.6",
+    "@storybook/test": "^8.2.6",
     "@testing-library/react": "^16.0.0",
-    "@ugrc/tailwind-colors": "^1.0.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
-    "babel-loader": "^9.1.3",
     "chokidar-cli": "^3.0.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -100,7 +93,6 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "html-webpack-plugin": "^5.6.0",
     "jsdom": "^24.1.1",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
@@ -109,7 +101,7 @@
     "react-lorem-ipsum": "^1.4.10",
     "read-pkg": "^9.0.1",
     "release-please": "^16.12.0",
-    "storybook": "^8.2.5",
+    "storybook": "^8.2.6",
     "tailwind-variants": "^0.2.1",
     "tailwindcss": "^3.4.6",
     "tailwindcss-react-aria-components": "^1.1.4",
