--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -51,15 +51,15 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "@ugrc/utilities": "*",
-    "react-aria-components": "^1.2.1",
-    "tailwind-merge": "^2.4.0",
-    "@heroicons/react": "^2.1.5",
-    "tailwind-variants": "^0.2.1",
-    "react-aria": "^3.34.1",
-    "react-stately": "3.32.1",
     "@arcgis/core": "^4.30.9",
-    "lodash-es": "^4.17.21"
+    "@heroicons/react": "^2.1.5",
+    "@ugrc/utilities": "*",
+    "lodash-es": "^4.17.21",
+    "react-aria": "^3.34.1",
+    "react-aria-components": "^1.2.1",
+    "react-stately": "3.32.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwind-variants": "^0.2.1"
   },
   "peerDependencies": {
     "prop-types": "^15.8.1",
