--- a/packages/utilities/package.json
+++ b/packages/utilities/package.json
@@ -56,8 +56,8 @@
   },
   "peerDependencies": {
     "@arcgis/core": "^4.20.0",
+    "ky": ">=1.3.0",
     "prop-types": "^15.8.1",
-    "react": ">=16.8.0",
-    "ky": ">=1.3.0"
+    "react": ">=16.8.0"
   }
 }
