--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -20,8 +16,5 @@
     "jsx": "react",
     "skipLibCheck": true
   },
-  "include": [
-    "src",
-    "stories"
-  ]
+  "include": ["src", "stories"]
 }
