--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -52,7 +52,8 @@
     "test": "vitest --config ../../vite.config.js"
   },
   "dependencies": {
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "peerDependencies": {
     "@arcgis/core": "^4.20.0",
