chore(layer-selector): add dev export

--- a/packages/layer-selector/package.json
+++ b/packages/layer-selector/package.json
@@ -40,6 +40,9 @@
     },
     "./src": {
       "import": "./src/"
+    },
+    "./dev": {
+      "import": "./src/index.js"
     }
   },
   "files": [
