chore(monorepo): fix UMD typescript errors and tighten up config
Co-authored-by: steveoh <sgourley@utah.gov>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react-jsx",
     "skipLibCheck": true
   },
-  "include": ["src", "stories"]
+  "include": ["packages", "src"]
 }
