fix(monorepo): add design system as a release please package

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -8,7 +8,8 @@
     "packages/mouse-trap": {},
     "packages/sherlock": {},
     "packages/utilities": {},
-    "packages/popover": {}
+    "packages/popover": {},
+    "packages/utah-design-system": {}
   },
   "include-component-in-tag": true
 }
