--- a/.release-please-manifest.json
+++ b/.release-please-manifest.json
@@ -5,5 +5,6 @@
   "packages/mouse-trap": "2.0.8",
   "packages/popover": "1.1.0",
   "packages/sherlock": "4.0.7",
-  "packages/utilities": "2.2.3"
+  "packages/utilities": "2.2.3",
+  "packages/utah-design-system": "1.0.0"
 }
