feat: add tailwindcss-react-aria-components plugin

--- a/packages/tailwind-preset/package.json
+++ b/packages/tailwind-preset/package.json
@@ -36,5 +36,8 @@
   "scripts": {
     "build": "echo skipping",
     "test": "echo skipping"
+  },
+  "dependencies": {
+    "tailwindcss-react-aria-components": "^1.1.4"
   }
 }
