--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -62,6 +62,7 @@
     "tailwind-variants": "^0.2.1"
   },
   "peerDependencies": {
+    "firebase": ">=10.0.0",
     "prop-types": "^15.8.1",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
