--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@storybook/react-vite": "^8.2.6",
     "@storybook/test": "^8.2.6",
     "@testing-library/react": "^16.0.0",
+    "@types/node": "^22.5.0",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.19",
     "chokidar-cli": "^3.0.0",
@@ -106,6 +107,7 @@
     "tailwindcss": "^3.4.7",
     "tailwindcss-react-aria-components": "^1.1.4",
     "vite": "^5.3.5",
+    "vite-plugin-dts": "^4.0.3",
     "vitest": "^2.0.4"
   }
 }
