fix: update typescript type path

--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -34,11 +34,11 @@
   ],
   "type": "module",
   "module": "./dist/index.esm.js",
-  "types": "./dist/index.d.ts",
+  "types": "./dist/index.esm.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.esm.d.ts"
     },
     "./src": {
       "import": "./src/index.js"
