fix(monorepo): typescript types during build
closes #278
closes #277

--- a/packages/utah-design-system/package.json
+++ b/packages/utah-design-system/package.json
@@ -33,12 +33,10 @@
     }
   ],
   "type": "module",
-  "module": "./dist/index.esm.js",
-  "types": "./dist/index.esm.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.esm.js",
-      "types": "./dist/index.esm.d.ts"
+      "types": "./dist/index.d.ts"
     },
     "./src": {
       "import": "./src/index.js"
@@ -46,7 +44,8 @@
   },
   "files": [
     "dist",
-    "src"
+    "src",
+    "!stories/**/*"
   ],
   "scripts": {
     "build": "vite build --config ../../vite.config.js",
@@ -64,10 +63,10 @@
     "tailwind-variants": "^0.2.1"
   },
   "peerDependencies": {
-    "@arcgis/core": "^4.30.9",
-    "firebase": ">=10.0.0",
+    "@arcgis/core": "4.x",
+    "firebase": "10.x",
     "prop-types": "^15.8.1",
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": ">=16.8",
+    "react-dom": ">=16.8"
   }
 }
